--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#remoteVideo {
+  width: 100%;
+  height: auto;
+  display: block;
+}
