--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,6 +40,16 @@
   --color-sidebar-ring: var(--sidebar-ring);
 }
 
+.scrollbar-hide {
+  -ms-overflow-style: none; 
+  scrollbar-width: none;     
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;            
+}
+
+
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
